# online_courses

./: README.md
Image and Video Processing/week1/: averageImg.m  compress.m  maxpool.m  rotateImg.m
Image and Video Processing/week2/: jpeg_compress.m  jpeg_decompress.m
Image and Video Processing/week3/: NLmeansfilter.m  calcPSNR.m  main.m
Image and Video Processing/week4/: main.m
motion_planning/assignment/week1/: practice.m
motion_planning/assignment/week1/Assignment1_V1.1/: AStarGrid.m  DijkstraGrid.m
motion_planning/assignment/week3/Assignment3/: PRM.m  (+1 more)
perception/week1/RoboticsPerceptionWeek1AssignmentCode/: RoboticsPerceptionWeek1Submission.mat  compute_f_pos.m  compute_focal_length.m
perception/week2/RoboticsPerceptionWeek2AssignmentCode/: RoboticsPerceptionWeek2Submission.mat  est_homography.m  warp_pts.m
perception/week3/RoboticsPerceptionWeek3Code/: RoboticsPerceptionWeek3Submission.mat  ar_cube.m  track_corners.m
perception/week4/code/: EssentialMatrixFromFundamentalMatrix.m  EstimateFundamentalMatrix.m  LinearPnP.m  LinearTriangulation.m  Nonlinear_Triangulation.m  RoboticsPerceptionWeek4Submission.mat
princeton_alg_1-master/week1/: CMakeLists.txt
princeton_alg_1-master/week1/app/: main.cpp  percolation.cpp  percolation.h  quick_union.cpp  quick_union.h
princeton_alg_1-master/week1/tests/: CMakeLists.txt  percolation_tests.cpp  quick_union_tests.cpp
princeton_alg_1-master/week4/: CMakeLists.txt
princeton_alg_1-master/week4/src/: heap.h  main.cpp
princeton_alg_1-master/week4/tests/: CMakeLists.txt  heap_tests.cpp  unit_tests.cpp
(+9 files in other folders)
